add html mailers, update translations,  update email_test script

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -793,6 +793,10 @@ en:
       closes_in: "Closes in"
       subject: "Proposal closing soon: %{which}"
       summary: "Summary"
+    to_join_group:
+      subject: "%{member} has invited you to join %{group_name} on Loomio"
+    to_start_group:
+      subject: "Your Loomio group: %{group_name} has been created"
     trial_expiry:
       header: "%{group_name}: Your Loomio trial is almost up."
       hi: "Hi there,"
