--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -584,13 +584,16 @@ en:
 
   subscriptions:
     current_plan_html: "Your current plan is: <strong>%{subscription_plan}</strong>"
-    details: Payment details
+    redirecting_please_wait: Redirecting you to PayPal, please wait..
+    details: Group Subscription
     footer: Is your group larger than 100 people?
     select_your_plan: Select your plan
     note_about_paypal_html: Our payment system currently uses Paypal. If you can't use Paypal, please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a> to set up a payment method that works for you.
     monthly_amount: $%{amount}/month
     payment_plan_contact_html: To update your payment plan please contact us at <a href='mailto:accounts@loomio.org' target='_blank'>accounts@loomio.org</a>
-    people_in_group: You have %{people_in_group} people in your group
+    people_in_group:
+      one: You have %{count} people in your group
+      other: You have %{count} people in your group
     people_limit_html: Up to <strong>%{people}</strong> people
     prices_in_us_dollars: Prices are in US dollars
     footer: Is your group larger than 100 people?
