Move donation text into locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -528,6 +528,13 @@ en:
       Everyone is welcome to join the Loomio Community, where we talk about how to make the most of the tool, and how it can be improved.
 
       <a href='https://www.loomio.org/groups/3'>Take me to the Loomio Community group &raquo;</a>
+    making_a_donation: Making a donation
+    making_a_donation_description: |
+      Loomio is a cooperative social enterprise working to make it easy for anyone to participate in decisions that affect them.
+
+      Your contribution means we can keep Loomio independent, free of advertising, and driven by our community of users.
+      
+      Thanks for making this possible!
 
   #
   # SIGN IN
