Improve contribution language

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -510,13 +510,13 @@ en:
     one_time_html: I'd like to make a one-off contribution of
     submit: Contribute
     tooltip: Learn about our community funding model
-    thought_about_contributing: Choose your contribution
+    thought_about_contributing: Your chance to contribute
     thought_about_contributing_description: |
       Loomio is a cooperative social enterprise working to make it easy for anyone to participate in decisions that affect them.
 
-      We believe money shouldn’t be a barrier, so we’re developing a revenue model that puts you in charge of the amount you pay.
+      Money shouldn’t be a barrier to collaborative decision-making. Loomio is funded by contributions from our community of users, and subscriptions paid by formal organisations using it.
 
-      Your contribution means we can keep Loomio independent, free of advertising, and driven by our community of users.
+      Your group does not pay a subscription fee, so this is your chance to contribute. Your contribution means we can keep Loomio independent, free of advertising, and freely available to community groups like yours.
 
       Thanks for making this possible!
     thank_you_title: Thank you for contributing to Loomio!
