--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -14,6 +14,15 @@ el:
       for_this_year: '%e %b'
       for_another_year: '%-d/%-m/%y'
       datepicker: "%d-%m-%Y"
+  devise:
+    invitations:
+      send_instructions: 'Η πρόσκληση έχει σταλθεί στο %{email}.'
+      invitation_token_invalid: 'Το διακριτικό πρόσκλησης που παρέχεται δεν είναι έγκυρο!'
+      updated: 'Ο λογαριασμός δημιουργήθηκε.'
+      no_invitations_remaining: "Δεν απομένουν προσκλήσεις"
+    mailer:
+      invitation_instructions:
+        subject: 'Κάποιος/α σας έχει προσκαλέσει να συμμετάσχετε στην ομάδα του στο Loomio'
   error:
     access_denied: "Δεν έχετε το δικαίωμα για να το κάνετε αυτό."
     cant_join_subgroup: "Δεν μπορείτε να συμμετάσχετε σε υπό-ομάδα εάν δεν είστε μέλος της κεντρικής ομάδας."
@@ -113,6 +122,12 @@ el:
       almost_x_years:
         one: "1 χρόνος"
         other: "%{count} χρόνια"
+  footer:
+    about: 'Σχετικά'
+    blog: 'Blog'
+    contact: 'Επικοινωνία'
+    privacy: 'Απόρρητο'
+    terms: 'Όροι'
   inbox:
     dropdown-btn: 'Εισερχόμενα'
     empty: Είστε ενήμεροι! Δεν υπάρχουν σχόλια που δεν έχετε δει.
@@ -132,7 +147,7 @@ el:
     motion_closing_soon: "Η πρόταση κλείνει σύντομα"
     motion_blocked: "μπλόκαρε την πρόταση"
   edit_discussion_context: "Επεξεργασία περιεχομένου συζήτησης"
-  request_new_group: "Αίτηση νέας ομάδας"
+  request_new_group: "Ξεκινήστε μια ομάδα"
   request_new_group_details: "ή περιμένετε μέχρι να σας προσκαλέσουν σε μία."
   empty_notifications: "Δεν έχετε καμία ειδοποίηση ακόμα."
   see_all_notifications: "Δείτε όλες τις ειδοποιήσεις"
@@ -217,6 +232,14 @@ el:
   start_a_discussion: "Ξεκινήστε μια συζήτηση"
   group_description: "Περιγραφή ομάδας"
   edit_group_description: "Επεξεργασία περιγραφής ομάδας"
+  payment_details_link: "Πληροφορίες πληρωμών"
+  group_request:
+    confirmation:
+      title: Σχεδόν τελειώσατε! Ελέγξτε το ηλεκτρονικό ταχυδρομείο σας.
+      body_html: |
+        Σας έχουμε στείλει ηλεκτρονικό μήνυμα με πρόσκληση για να ξεκινήσετε την ομάδα σας.
+
+        Εάν δεν βλέπετε τίποτα στα εισερχόμενα σας σε λίγα λεπτά, στείλτε μας ηλεκτρονικό μήνυμα στο <a href='mailto:contact@loomio.org'>contact@loomio.org</a>.
   discussion_items:
     new_discussion: "Η συζήτηση δημιουργήθηκε"
     new_motion: "Η πρόταση δημιουργήθηκε"
@@ -267,8 +290,8 @@ el:
   proposal_closing_when: "Κλείνει σε %{when}"
   proposal_closed_when: "Έκλεισε πριν από %{when}"
   proposed_when_by_who: "Προτάθηκε από τον/την %{who} πριν από %{when} "
-  engagement_on_open_proposal: "%{percent}% των μελών έχουν πάρει θέση (%{numerator}/%{denominator})"
-  engagement_on_closed_proposal: "%{percent}% των μελών έχουν πάρει θέση (%{numerator}/%{denominator})"
+  engagement_on_open_proposal: "%{percent}%% των μελών έχουν πάρει θέση (%{numerator}/%{denominator})"
+  engagement_on_closed_proposal: "%{percent}%% των μελών έχουν πάρει θέση (%{numerator}/%{denominator})"
   state_your_position: "Δηλώστε την θέση σας"
   positions: "Θέσεις"
   yes_position: "Συμφωνώ"
@@ -366,20 +389,39 @@ el:
     invitation: 'Συμβουλές για να γράψετε μια  μεγάλη πρόσκληση'
     proposal: 'Συμβουλές για να γράψετε καθαρά μια πρόταση'
     vote: 'Μπορείτε να αλλάξετε την θέση σας ανά πάσα στιγμή'
+  pricing_page:
+    organisations: Οργανισμοί
+    organisations_examples: π.χ. εταιρίες, κυβερνητικές υπηρεσίες, οργανώσεις της κοινότητας
+    informal_groups: Άτυπες Ομάδες
+    informal_groups_desc: Τα μέλη της ομάδα σας θα ερωτηθούν να πληρώσουν ότι μπορούν
+    informal_groups_examples: π.χ. οικογένειες, κοινωνικά κινήματα, συλλογικότητες
   contribution:
+    any_amount: ή μια προσαρμοσμένη μιας φοράς συνεισφορά των
+    currency_desc: Τα ποσά είναι σε δολάρια ΗΠΑ
+    monthly_html: Θα ήθελα να κάνω μηνιαία συνεισφορά των
+    one_time_html: Θα ήθελα να κάνω μιας φοράς συνεισφορά των
+    submit: Συνεισφορά
     tooltip: Μάθετε σχετικά με το μοντέλο χρηματοδότησης της κοινωνίας μας
-    thought_about_contributing: Επιλέξτε την συνεισφορά σας
-    thought_about_contributing_description: "Το Loomio είναι ένα μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να κάνει εύκολο για οποιονδήποτε να συμμετάσχει σε αποφάσεις που τον αφορούν.\n\nΠιστεύουμε ότι τα λεφτά δεν θα έπρεπε να αποτελούν εμπόδιο, έτσι αναπτύσσουμε ένα εναλλακτικό μοντέλο εσόδων το\nοποίο σας καθιστά υπεύθυνους για το ποσό\
-      \ που πληρώνετε. \n\nΗ συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και καθοδηγούμενο από την κοινότητα των χρηστών μας\n\nΕυχαριστούμε που το κάνετε αυτό δυνατόν!\n"
+    thought_about_contributing: Η ευκαιρία για να συμμετάσχετε
+    thought_about_contributing_description: "Το Loomio είναι μια συλλογική κοινωνική επιχείρηση που εργάζονται ώστε να είναι εύκολο για τον καθένα να συμμετέχει στη λήψη αποφάσεων που τους αφορούν.\n\nΤα χρήματα δεν θα πρέπει να αποτελούν εμπόδιο για τη συλλογική λήψη αποφάσεων. Το Loomio χρηματοδοτείται από τις συνεισφορές από την κοινότητά μας των χρηστών,\
+      \ καθώς και από συνδρομές που καταβάλλονται από τις επίσημες οργανώσεις που το χρησιμοποιούν. \n\nΗ ομάδα σας δεν πληρώνει συνδρομή, οπότε αυτή είναι η ευκαιρία σας για να συνεισφέρετε. Η συμβολή σας σημαίνει ότι μπορεί να κρατήσει το Loomio ανεξάρτητο, χωρίς διαφημίσεις, και ελεύθερα διαθέσιμο σε κοινοτικές ομάδες όπως η δική σας. \n\nΕυχαριστούμε\
+      \ για την πραγματοποίηση του! \n"
     thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
-      Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογικές λήψεις αποφάσεων στον κόσμο.
+      Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογική λήψη αποφάσεων στον κόσμο.
 
-      Θα λάβετε σύντομα ένα ηλεκτρονικό μήνυμα με την απόδειξη για την συνεισφορά σας.
+      Θα λάβετε σύντομα ένα ηλεκτρονικό μήνυμα με την απόδειξη της συνεισφορά σας.
 
-      Όλοι είναι ευπρόσδεκτοι να συμμετάσχουν στην κοινότητα του Loomio, όπου συνομιλάμε για το πως θα το κάνουμε το καλύτερο εργαλείο και πως θα το βελτιώσουμε.
+      Όλοι είναι ευπρόσδεκτοι να συμμετάσχουν στην κοινότητα του Loomio, όπου μιλάμε σχετικά με το πως να το κάνουμε το καλύτερο εργαλείο, και πως μπορεί να βελτιωθεί.
 
-      <a href='https://www.loomio.org/groups/3'>Πήγαινε με στην ομάδα της κοινότητας του Loomio </a>
+      <a href='https://www.loomio.org/groups/3'>Πήγαινε με στην κοινότητα του Loomio</a>
+    making_a_donation: Κάνοντας μια δωρεά
+    making_a_donation_description: |
+      Το Loomio είναι ένα μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να κάνει εύκολο για οποιονδήποτε να συμμετάσχει σε αποφάσεις που τον αφορούν.
+
+      Η συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και καθοδηγούμενο από την κοινότητα των χρηστών μας.
+
+      Ευχαριστούμε που το κάνετε αυτό δυνατόν!
   resend_confirmation: "Επαναποστολή οδηγιών επιβεβαιώσης"
   new_password: "Νέος Κωδικός"
   confirm_new_password: "Επιβεβαίωση νέου κωδικού"
@@ -393,9 +435,6 @@ el:
   cancel_my_account: "Ακύρωσε τον λογαριασμό μου"
   remember_me: "Να με θυμάσε"
   signing_in: "Είσοδος"
-  dont_have_account: "Δεν έχετε λογαριασμό?"
-  closed_beta: "Είμαστε σε κλειστή δοκιμή και δεν δεχόμαστε δημόσιες εγγραφές (ακόμα!)."
-  closed_beta_details: "Εάν ανήκετε σε ομάδα η οποία χρησιμοποιεί το Loomio αλλά δεν έχετε Loomio λογαριασμό, παρακαλούμε επικοινωνήστε με το άτομο του οργανισμό σας, ο οποίος είναι διαχειριστής στο Loomio, και ζητήστε του να σας προσθέσει στην ομάδα."
   forgot_your_password: "Ξεχάσατε τον κωδικό σας?"
   confirmation_not_received: "Δεν λάβατε οδηγίες επιβεβαίωσης?"
   unlock_not_received: "Δεν λάβατε οδηγίες ξεκλειδώματος?"
@@ -405,8 +444,8 @@ el:
     sign_in_intro: "Θα χρειαστείτε να εισέλθετε για να συμμετάσχετε στην ομάδα."
   start_group:
     header: "Καλώς Ήρθατε στο Loomio"
-    sign_up_intro: "Η αίτηση σας για να ξεκινήσετε μια νέα ομάδα στο Loomio έχει εγκριθεί! Θα χρειαστείτε να δημιουργήσετε ένα νέο λογαριασμό πριν μπορέσετε να δημιουργήσετε την ομάδα σας:"
-    sign_in_intro: "Η αίτηση σας για να ξεκινήσετε μια νέα ομάδα στο Loomio έχει εγκριθεί. Θα χρειαστεί να εισέλθετε πριν μπορέσετε να δημιουργήσετε την ομάδα σας: "
+    sign_up_intro: "Θα χρειαστεί να δημιουργήσετε ένα νέο λογαριασμό πριν δημιουργήσετε την ομάδα σας:"
+    sign_in_intro: "Θα χρειαστεί να εισέλθετε πριν δημιουργήσετε την ομάδα σας:"
   invitation:
     no_invitations_left: "Συγνώμη δεν έχουν απομείνει άλλες προσκλήσεις"
     no_invitations_left_get_more: "Παρακαλούμε στείλτε ηλεκτρονικό μήνυμα στο contact@loomio.org και θα δούμε τι μπορούμε να κάνουμε"
@@ -480,16 +519,23 @@ el:
     use_avatar_kind: "Χρησιμοποιήστε %{kind}"
     upload_new_image: "Ανεβάστε νέα εικόνα"
   group_setup:
-    intro: "Ως συντονιστής της ομάδας, είστε υπεύθυνος για να ρυθμίσετε και να διαχειριστείτε την ομάδα σας στο Loomio. Πρώτα απ' όλα χρειάζεται να συμπληρώσετε μερικές ρυθμίσεις, έπειτα μπορείτε να μπείτε στην νέα ομάδα, να ξεκινήσετε μία συζήτηση ή 2, και να στείλετε μερικές προσκλήσεις!"
+    desc_header: "Σχεδόν τελειώσατε!"
     submit: "Πήγαινε με στην ομάδα μου!"
   simple_form:
+    'yes': 'Ναι'
+    'no': 'Όχι'
+    required:
+      text: 'απαιτείται'
+      mark: '*'
+    error_notification:
+      default_message: "Παρακαλούμε θεωρήστε τα παρακάτω προβλήματα:"
     labels:
       discussion:
         title: "Τίτλος"
         description: "Περιεχόμενο"
       group:
         name: "Ποιο είναι το όνομα της ομάδα σας?"
-        description: "Δώστε μια περιγραφή της ομάδα σας:"
+        description: "Περιγραφή ομάδας:"
         viewable_by: "Ποιος μπορείς να δει αυτή την ομάδα?"
         members_invitable_by: "Ποιος μπορεί να προσκαλέσει άτομα σε αυτή την ομάδα?"
       membership_request:
@@ -506,8 +552,8 @@ el:
     options:
       group:
         viewable_by:
-          everyone: 'Δημόσιο - οποιοσδήποτε με τον σύνδεσμο μπορεί να δει αυτή την ομάδα'
-          members: 'Μέλη - μόνο τα μέλη μπορούν να δουν αυτή την ομάδα'
+          everyone: 'Όλοι'
+          members: 'Μόνο μέλη'
           parent_group_members: "Μέλη κύριας Ομάδας - μόνο τα μέλη της κύριας ομάδας μπορούν να δουν αυτή την υπο-ομάδα"
         members_invitable_by:
           admins: 'Μόνο Συντονιστές'
@@ -522,7 +568,7 @@ el:
         name: "Ποια είναι η δικιά σας προτεινόμενη πορεία δράσης?"
         description: "Δώστε αρκετές πληροφορίες ώστε ο καθένας να γνωρίζει ακριβώς τι σημαίνει να συμφωνεί ή να διαφωνεί."
       group:
-        description: "Σκέψου με τον πιο απλό τρόπο για να περιγράψεις την ομάδα σου: Τι θέλετε να πετύχετε μαζί? Τι είδους αποφάσεις θέλετε να κάνετε? Ποιος θα εμπλέκεται?"
+        description: "Δώστε μια περιγραφή της ομάδα σας:"
   helpers:
     submit:
       discussion:
@@ -555,6 +601,13 @@ el:
     group_membership_approved:
       intro: "Η αίτηση σας για πρόσβαση στην ομάδα '%{group_name}' στο Loomio έχει εγκριθεί."
       subject: "Αίτηση Μέλους εγκρίθηκε"
+    invitation:
+      hi: "Γειά %{name},"
+      intro: "Πατήστε τον σύνδεσμο παρακάτω για να δημιουργήσετε την ομάδα σας %{group_name}:"
+      closing_message: "Εάν έχετε ερωτήσεις ή εάν υπάρχει κάτι άλλο που μπορούμε να κάνουμε για να σας βοηθήσουμε για να οργανωθείτε και να λειτουργήσετε, θα θέλαμε να το ακούσουμε - απλώς απαντώντας σε αυτό το ηλεκτρονικό μήνυμα."
+      thanks: |
+        Ευχαριστούμε!
+        Η ομάδα του Loomio
     membership_request:
       intro: "Ο/Η %{name} (%{email}) έχει ζητήσει πρόσβαση σε μία από τις Loomio ομάδες σας."
       subject: "Νέα αίτηση μέλους από %{who}"
@@ -574,6 +627,23 @@ el:
       closes_in: "Κλείνει σε"
       subject: "Η πρόταση κλείνει σύντομα: %{which}"
       summary: "Σύνοψη"
+    to_join_group:
+      subject: "Ο/Η %{member} σας προσκάλεσε για να συμμετάσχετε στην ομάδα %{group_name} στο Loomio"
+    to_start_group:
+      subject: "Ρυθμίστε την νέα σας Loomio ομάδα: %{group_name}"
+    trial_expiry:
+      header: "%{group_name}: Η δοκιμή του Loomio είναι σχεδόν έτοιμη."
+      hi: "Γεια σου,"
+      intro_html: |
+        Απλά μια φιλική ενημέρωση για να σας γνωστοποιήσουμε ότι η δοκιμή σας λήγει σε 5 ημέρες. Ελπίζουμε να απολαμβάνεται το Loomio μέχρι στιγμής.
+        <p> Μόλις τελειώσει η δοκιμαστική περίοδος, θα χρειαστεί να εισάγετε τις πληροφορίες πληρωμής ώστε η ομάδα σας να μπορεί να συνεχίσει να χρησιμοποιεί το Loomio.</p>
+        <p>Εάν έχετε ερωτήσεις ή εάν υπάρχει οτιδήποτε άλλο που μπορούμε να κάνουμε για να βοηθήσουμε την ομάδα σας να πετύχει με το Loomio, θα θέλαμε να το ακούσουμε από εσάς.</p>
+    trial_follow_up:
+      header: "%{group_name}: Πως πηγαίνει μέχρι τώρα η δοκιμή σας στο Loomio?"
+      hi: "Γεια σας,"
+      intro_html: |
+        Απλά μια φιλική ειδοποίηση για να ξέρετε ότι είστε στα μισά του δρόμου της δοκιμής σας. Ελπίζουμε να απολαμβάνετε το Loomio μέχρις στιγμής! Εάν θα θέλατε μερικές συμβουλές σχετικά για να πάρετε τα καλύτερα από το Loomio,  <a href='/help#getting-the-most-out-of-Loomio'>ρίξτε μια ματιά εδώ.</a>
+        <p>Θα χρειαστεί να εισάγετε της πληροφορίες πληρωμής σας πριν το τέλος της δοκιμής ώστε να συνεχίσετε να χρησιμοποιείται το Loomio. <a href=''>Πατήστε εδώ</a> για να ρυθμίσετε τώρα τις πληροφορίες πληρωμής σας.</p>
     verification:
       header: "Σχεδόν τελειώσατε!"
       intro: "Παρακαλούμε πατήστε αυτόν τον σύνδεσμο επαλήθευσης για να τελειώσετε την αίτηση σας:"
@@ -613,6 +683,7 @@ el:
   new_activity: "Νέα δραστηριότητα"
   next: "Επόμενο"
   password: "Κωδικός"
+  pricing: 'Τιμολόγηση'
   proposal: "Πρόταση"
   prev: "Προηγούμενο"
   translate: "Βοηθήστε με την μετάφραση του Loomio!"
@@ -626,8 +697,11 @@ el:
   send_invite: "Στείλε πρόσκληση"
   send_email: "Στείλε ηλεκτρονικό ταχυδρομείο"
   show_more: "Δείξε περισσότερα"
+  start_a_group: "Ξεκινήστε μια ομάδα"
   starting: "Ξεκινάει"
   subject: "Θέμα"
+  terms_of_service_html: "Πατώντας %{button_text}, συμφωνείτε στου Loomio τους <a href='%{link_path}' target='_blank'>Όρους της Υπηρεσίας</a>"
+  thanks: "Ευχαριστούμε!"
   unlike: "Δεν μ'άρέσει"
   until_close: "μέχρι να κλείσει"
   update: "Ενημέρωση"
