--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -742,7 +742,7 @@ en:
         name: "What is your proposed course of action?"
         description: "Give enough information so that everyone knows exactly what it means to agree or disagree."
       group:
-        description: "Think about the simplest way you can describe your group: What do you want to achieve together? What types of decisions will you be making? Who will be involved?"
+        description: "Add a description of your group."
       user:
         email: "Email"
         password: "Password"
